DOC-385 Fix odd breadcrumb rendering (#24095)
## Summary & Motivation

The basic issue is that there's just too much text to fit in a single
line. The previous css made it so that each individual box would get
squished, which was pretty ugly. This just lets the breadcrumbs wrap
into a second line, which looks a bit better.

## How I Tested These Changes

## Changelog [New | Bug | Docs]

NOCHANGELOG

--- a/docs/docs-beta/src/styles/custom.scss
+++ b/docs/docs-beta/src/styles/custom.scss
@@ -52,7 +52,7 @@ hr {
 
 .breadcrumbs {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   color: var(--theme-color-text-light);
 
